add final CV document

--- a/en/portfolio.html
+++ b/en/portfolio.html
@@ -426,6 +426,7 @@
                             <div class="tool red">Groq API</div>
                             <div class="tool red">YOLO</div>
                             <div class="tool red">PandasAI</div>
+                            <div class="tool red">N8N</div>
                         </div>
                     </div>
                 </div>
@@ -483,129 +484,156 @@
             <h2>My achievements?</h2>
         </div>
         <div class="row portfolio__gallery">
-            <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
-                    <!-- Project image in data-setbg -->
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-code text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Malagasy Ethical Fashion Platform</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>Next JS</li>
+                            <li>Motion.js</li>
+                            <li>Tailwind</li>
+                            <li>Vercel</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix digital-marketing">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-laptop-code text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Interactive Professional Portfolio</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>HTML, CSS</li>
+                            <li>GSAP, Three JS</li>
+                            <li>Vercel</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix automation other">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-robot text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Social Media Post Automation</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>N8N</li>
+                            <li>Gemini API</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web other">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-envelope-open-text text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Her Story Madagascar Newsletter</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>System.io</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design web">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-pencil-ruler text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Wedding Organization Platform</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>Visily (Design)</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-cube text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>3D View Module Development</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>React</li>
+                            <li>Three JS</li>
+                            <li>Google Model Viewer</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-gamepad text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Fun & Educational Multilingual Platform</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>React</li>
+                            <li>Tailwind</li>
+                            <li>Supabase</li>
+                            <li>i18n</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-file-alt text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>QCM Sharing Platform</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>Figma (Design)</li>
+                            <li>Flutter</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix mobile other">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-heartbeat text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Hospital Alert & Accident Detection System</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>React</li>
+                            <li>YOLO (Detection)</li>
+                            <li>React Native</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-graduation-cap text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>ENI Student Association Website</h4>
+                        <ul>
+                            <li>HTML, CSS</li>
+                            <li>Bootstrap</li>
                         </ul>
                     </div>
                 </div>
