--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -474,133 +474,160 @@
     <!-- Projects Section Begin -->
     <section id="projects" data-aos="fade-in" class="portfolio">
         <div class="section-title">
-            <span>Projets</span>
-            <h2>Mes réalisations</h2>
+            <span>Projects</span>
+            <h2>My achievements?</h2>
         </div>
         <div class="row portfolio__gallery">
-            <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
-                    <!-- Project image in data-setbg -->
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-code text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Plateforme Mode Éthique Malgache</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>Next JS</li>
+                            <li>Motion.js</li>
+                            <li>Tailwind</li>
+                            <li>Vercel</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix digital-marketing">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-laptop-code text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Portfolio Professionnel Interactif</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>HTML, CSS</li>
+                            <li>GSAP, Three JS</li>
+                            <li>Vercel</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix automation other">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-robot text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Automation de Post Réseaux Sociaux</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>N8N</li>
+                            <li>Gemini API</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web other">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-envelope-open-text text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Newsletter Her Story Madagascar</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>System.io</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design web">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-pencil-ruler text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Plateforme Organisation Mariage</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>Visily (Conception)</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-cube text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Module de Vue 3D</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>React</li>
+                            <li>Three JS</li>
+                            <li>Google Model Viewer</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix web">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-gamepad text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Plateforme Ludique et Éducative</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>React</li>
+                            <li>Tailwind</li>
+                            <li>Supabase</li>
+                            <li>i18n</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix design mobile">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-file-alt text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Plateforme de Partage de QCMs</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>Figma (Conception)</li>
+                            <li>Flutter</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix mobile other">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
-                        <i class="fa fa-image text-white fa-xl"></i>
+                        <i class="fa fa-heartbeat text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Title</h4>
+                        <h4>Système de Prévention Alertes Hôpital</h4>
                         <ul>
-                            <li>Stack 1</li>
-                            <li>Stack 2</li>
+                            <li>React</li>
+                            <li>YOLO (Détection)</li>
+                            <li>React Native</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web branding">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-graduation-cap text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Site Vitrine Association ENI</h4>
+                        <ul>
+                            <li>HTML, CSS</li>
+                            <li>Bootstrap</li>
                         </ul>
                     </div>
                 </div>
