CV and projects update

--- a/en/portfolio.html
+++ b/en/portfolio.html
@@ -475,7 +475,7 @@
         </div>
         <div class="ball"></div>
     </section>
-    <!-- /Services Section -->
+    <!-- /Skills Section -->
 
     <!-- Projects Section Begin -->
     <section id="projects" data-aos="fade-in" class="portfolio">
@@ -559,18 +559,34 @@
                     </div>
                 </div>
             </div>
-
+            
             <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
                 <div class="portfolio__item">
                     <div class="portfolio__item__image set-bg" data-setbg="">
                         <i class="fa fa-cube text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>3D View Module Development</h4>
+                        <h4>Web 3D Viewer</h4>
                         <ul>
                             <li>React</li>
-                            <li>Three JS</li>
-                            <li>Google Model Viewer</li>
+                            <li>Node JS</li>
+                            <li>MySQL</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-car text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Car Rental Plateform</h4>
+                        <ul>
+                            <li>React</li>
+                            <li>Node JS</li>
+                            <li>MySQL</li>
                         </ul>
                     </div>
                 </div>
@@ -599,7 +615,7 @@
                         <i class="fa fa-file-alt text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>QCM Sharing Platform</h4>
+                        <h4>MCQ Creation and Sharing Platform</h4>
                         <ul>
                             <li>Figma (Design)</li>
                             <li>Flutter</li>
