--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -469,7 +469,7 @@
         </div>
         <div class="ball"></div>
     </section>
-    <!-- /Services Section -->
+    <!-- /Skills Section -->
 
     <!-- Projects Section Begin -->
     <section id="projects" data-aos="fade-in" class="portfolio">
@@ -560,11 +560,27 @@
                         <i class="fa fa-cube text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Module de Vue 3D</h4>
+                        <h4>Visionneur 3D pour le Web</h4>
                         <ul>
                             <li>React</li>
                             <li>Three JS</li>
                             <li>Google Model Viewer</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 mix web design">
+                <div class="portfolio__item">
+                    <div class="portfolio__item__image set-bg" data-setbg="">
+                        <i class="fa fa-car text-white fa-xl"></i>
+                    </div>
+                    <div class="portfolio__item__text">
+                        <h4>Plateforme de location de voiture</h4>
+                        <ul>
+                            <li>React</li>
+                            <li>Node JS</li>
+                            <li>MySQL</li>
                         </ul>
                     </div>
                 </div>
@@ -593,7 +609,7 @@
                         <i class="fa fa-file-alt text-white fa-xl"></i>
                     </div>
                     <div class="portfolio__item__text">
-                        <h4>Plateforme de Partage de QCMs</h4>
+                        <h4>Plateforme de Création et de Partage de QCM</h4>
                         <ul>
                             <li>Figma (Conception)</li>
                             <li>Flutter</li>
